--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="profile">
                 <img class="flex1" src="./hi.png">
                 <div class="flex1 intro">
-                    <H1 class="para">Hi there! <span id="hi">&#x1F44B</span></H1>
+                    <H1 class="para">Hi there! I am Saurav Pandey. <span id="hi">&#x1F44B</span></H1>
                     <p id="para">A highly motivated engineering student, fuelled by passion for programming,
                         I am a dedicated professional eager to secure an opportunity to gain practical experience,
                         seeking to develop technical skills and foster teamwork abilities.</p>
