--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
             </div>
             <div class="skills">
                 <p id="ps">Professional skills:</p>
-                <p>Frontend web development
-                    (expertise in HTML and CSS)</p>
-                <p>Familiar with Java</p>
+                <p>Java Script</p>
+                <p>CSS</p>
+                <p>HTML</p>
+                <p>Java Programming language</p>
+                <p>AutoCAD</p>
                 <p>Microsoft Office</p>
                 <p>Photo and Video editing</p>
             </div>
